Further adjustments to ensure all 9 projects are visible

--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -18,7 +18,6 @@
   margin: auto;
   display: flex;
   flex-direction: column;
-  height: 100%;
   align-content: stretch;
 }
 .work-flex {
